# vk-mem-rs

./: Cargo.toml  build.rs
src/: lib.rs
tests/: mod.rs
wrapper/: vma_lib.cpp
wrapper/vulkan/: vulkan_core.h
