[package]
name = "vk-mem"
version = "3.0.0"
authors = ["Graham Wihlidal <graham@wihlidal.ca>", "Max Rink <mwjrink>"]
description = "Rust ffi bindings and idiomatic wrapper for AMD Vulkan Memory Allocator (VMA)"
homepage = "https://github.com/mwjrink/vk-mem-rs"
repository = "https://github.com/mwjrink/vk-mem-rs"
documentation = "https://docs.rs/vk-mem"
readme = "README.md"
keywords = ["vulkan", "vk", "ash", "memory", "allocator"]
categories = ["api-bindings", "rendering", "rendering::engine", "rendering::graphics-api", ]
license = "MIT/Apache-2.0"
build = "build.rs"
include = [
    "src/*.rs",
    "gen/bindings.rs",
    "build.rs",
    "Cargo.toml",
    "vendor/src/vk_mem_alloc.h",
    "wrapper/vulkan/vk_platform.h",
    "wrapper/vulkan/vulkan_core.h",
    "wrapper/vulkan/vulkan.h",
    "wrapper/vma_lib.cpp",
]
edition = "2021"

# [badges]
# travis-ci = { repository = "gwihlidal/vk-mem-rs" }
# maintenance = { status = "actively-developed" }

[dependencies]
ash = "0.36.0+1.3.206"
bitflags = "1.3.2"

[build-dependencies]
cc = "1.0.50"

[build-dependencies.bindgen]
version = "0.59.2"
optional = true

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[features]
default = ["link_vulkan"]
generate_bindings=["bindgen"]
link_vulkan=["ash/linked"]
load_vulkan=["ash/loaded"]
recording=[]
